tests/baselines/reference/MemberFunctionDeclaration3_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts(2,6): error TS2552: Cannot find name 'foo'. Did you mean 'C'?


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts (1 errors) ====
    class C {
       *[foo]() { }
         ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'C'?
    }